# restspect

./: README.md  restparse.cabal  restspect.cabal
etc/: restspect.y
examples/restspecs/: persons.rest
main/: Main.hs
src/Data/: RestSpec.hs
src/Text/Parser/: PolyRestSpect.hs  RestSpect.hs
src/Text/Parser/RestSpect/: Expr.hs  Token.hs
