name:               restspect
version:            0.0.1
license:            MIT
license-file:       etc/LICENCE
author:             Dom De Re
maintainer:         domdere@domdere.com
copyright:          Copyright (C) 2010-2013
synopsis:           Parsers for a human readable REST API specification format
category:           Text, Parser
description:        Haskell for a REST API specification language
homepage:           https://github.com/domdere/restparse
bug-reports:        https://github.com/domdere/restparse
cabal-version:      >= 1.10
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/restparse.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                        , HUnit
                        , containers
                        , array
                        , parsec >= 3.1.3
                        , text >= 0.11.3.1

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    Data.RestSpec
                        Text.Parser.RestSpect

executable              restdoc
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,$ORIGIN
    --extra-libraries:
    --extra-lib-dirs:

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4
                        , parsec >= 3.1.3
                        , text >= 0.11.3.1
                        , restspect

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base < 5 && >= 3,
                        doctest >= 0.9.7,
                        filepath >= 1.3,
                        directory >= 1.1,
                        QuickCheck >= 2.0

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests
